# promptstack

./: .gitignore  pyproject.toml
examples/context-summary/: contextsummarytask.py  jiggypedia-context-summary.py  promptstack
examples/context-summary/ContextSummaryTask.prompts/: PREFIX  PREFIX~
examples/quickstart/: main.py
examples/quickstart/StoryTask.prompts/: PREFIX
examples/url_summary/: main.py
examples/url_summary/UrlSummaryTask.prompts/: GITHUB_PROMPT_PREFIX  SUMMARIZE_PROMPT_PREFIX
examples/wikipedia-retrieve-then-read/: rtr.py  rtr_jiggypedia.py
examples/wikipedia-retrieve-then-read/WikipediaReadTask.prompts/: PREFIX
promptstack/: __init__.py  exceptions.py  openai.py  openai_backend.py  promptstack.py  subprompt.py
