[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "promptstack"
version = "0.0.2"
authors = [
  { name="Bill Kish", email="bk@jiggy.ai" },
]
dependencies=['pydantic', 'openai', 'transformers', 'loguru']
description = "Promptstack is an LLM pompt/task management toolkit"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jiggy-ai/promptstack"
"Bug Tracker" = "https://github.com/jiggy-ai/promptstack/issues"
